# Algebra-of-polynomials

./: LICENSE  README.md
Algebra-of-Polynomials/: CMakeLists.txt
Algebra-of-Polynomials/app/: CMakeLists.txt  Form.cpp  main.cpp
Algebra-of-Polynomials/app/Form/: AppForm.cpp  AppForm.h  AppForm.resx  other.h
Algebra-of-Polynomials/cmake/: function.cmake
Algebra-of-Polynomials/libs/: base.h
Algebra-of-Polynomials/libs/Core/avl_tree/: AVLTree.h  CMakeLists.txt
Algebra-of-Polynomials/libs/Core/clist/: CList.h
Algebra-of-Polynomials/libs/Core/hash_chain_table/: CMakeLists.txt
Algebra-of-Polynomials/libs/Core/linear_array/: LinearArray.h
Algebra-of-Polynomials/libs/Core/linear_table_list/: CMakeLists.txt  linear_table_list.h
Algebra-of-Polynomials/libs/Core/monomial/: monomial.cpp  monomial.h
Algebra-of-Polynomials/libs/Core/polynomial/: polynomial.cpp  polynomial.h
Algebra-of-Polynomials/libs/Core/sorted_array_table/: CMakeLists.txt  sorted_array_table.cpp
Algebra-of-Polynomials/libs/Gen_Intererface/Gen_Intererface/: CMakeLists.txt  Gen_Intererface.cpp  Gen_Intererface.h
Algebra-of-Polynomials/libs/Linear_table_list/Linear_able_list/: CMakeLists.txt  Linear_table_list.cpp
Algebra-of-Polynomials/libs/Tables/avl_tree_table/: AVLTreeTable.cpp  AVLTreeTable.h  CMakeLists.txt
Algebra-of-Polynomials/libs/Tables/hash_chain_table/: hash_chain_table.h
Algebra-of-Polynomials/libs/Tables/interface_table/: CMakeLists.txt  ITable.cpp  ITable.h
Algebra-of-Polynomials/libs/Tables/linear_array_table/: CMakeLists.txt  linear_array_table.cpp  linear_array_table.h
Algebra-of-Polynomials/libs/Tables/linear_list_table/: CMakeLists.txt  linear_list_table.cpp  linear_list_table.h
Algebra-of-Polynomials/libs/Tables/open_addressing_hash/: CMakeLists.txt  open_addressing_hash.cpp  open_addressing_hash.h
Algebra-of-Polynomials/libs/Tables/open_addressing_hash/open_addressing_hash/: CMakeLists.txt  open_addressing_hash.h
Algebra-of-Polynomials/libs/Tables/sorted_array_table/: sorted_array_table.h
Algebra-of-Polynomials/libs/app/: CMakeLists.txt  main.cpp
Algebra-of-Polynomials/libs/clist/: CList.h  CMakeLists.txt
Algebra-of-Polynomials/libs/hash_array_double/: CMakeLists.txt
Algebra-of-Polynomials/libs/interface_avl_tree/: AVLTree.h  CMakeLists.txt  cmake_install.cmake  interface_avl_tree.vcxproj  interface_avl_tree.vcxproj.filters
Algebra-of-Polynomials/libs/lib_interface_avl_tree/: CMakeLists.txt
Algebra-of-Polynomials/libs/lib_polynomial/lib_polynomial/: CMakeLists.txt  lib_polynomial.cpp
Algebra-of-Polynomials/libs/linear_array/: CMakeLists.txt
Algebra-of-Polynomials/libs/monomial/: CMakeLists.txt  monomial.cpp  monomial.h
Algebra-of-Polynomials/libs/monoms/: monomial.cpp  monomial.h
Algebra-of-Polynomials/libs/polynomial/: CMakeLists.txt  polynomial.cpp  polynomial.h
Algebra-of-Polynomials/libs/postfix_polinoms/: CMakeLists.txt
Algebra-of-Polynomials/libs/sorted_array_table/: sorted_array_table.cpp  sorted_array_table.h
Algebra-of-Polynomials/libs/win_form/: Form.cpp
Algebra-of-Polynomials/main/: main.cpp
project/: main.h
