# CMakeList.txt: проект CMake для Linear_table_list; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("Linear_table_list")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (Linear_able_list "Linear_able_list.cpp" "Linear_table_list.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
